<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/scrolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edit_image_bg_selector"
                        android:onClick="onClickGetImages"
                        android:padding="4dp"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages"
                        app:srcCompat="@drawable/baseline_edit_24" />

                    <ProgressBar
                        android:id="@+id/vploadbar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/vpImages"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardinform"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_offer_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Заголовок"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_title_offer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="Заголовок"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                    <LinearLayout
                        android:id="@+id/divider_title"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/select_title_offer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/country"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/select_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/hint_select_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/city"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/select_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/hint_select_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/phone"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/hint_select_adress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/adress"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/adresseditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/adress_hint"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hint_select_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/select_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCat"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1_1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/hint_select_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/price"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/priceeditrext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/price_Hint"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                    <LinearLayout
                        android:id="@+id/divider1_2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/minimalistic_green"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/hint_enter_discr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/description"
                        android:textColor="@color/minimalistic_green"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextdiscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/description_hint"
                        android:inputType="text|textMultiLine"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/minimalistic_black"
                android:onClick="onClickPublish"
                android:text="@string/publish"
                android:textColor="@color/minimalistic_green" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>